# a2a-dev

./: LICENSE  README.md  flow.json  main.py  pyproject.toml
src/: compiler.py  flow_parser.py  run_workflow.py
src/models/: node_model.py  state_model.py
src/multi_tool_agent/: agent.py
src/templates/: adk_flow.jinja2
src/tools/: mcp_client.py
tests/: test_compiler.py  test_parser.py  test_workflow.py
